--- a/rintesfront/src/locales/en/translation.json
+++ b/rintesfront/src/locales/en/translation.json
@@ -32,7 +32,7 @@
     "mozambique":"Mozambique",
     "maputocity":"Maputo city",
     "delivertime":"Deliveries available to Maputo city and province from",
-    "sellernotauthorizedyet":"Your account has not yet been authorized to display your products. For more information, please contact Nhiquela Shop using the contact details below.",
+    "sellernotauthorizedyet":"Your account has not yet been authorized to display your products. For more information, please contact Rintes using the contact details below.",
     "onsale":"On sale",
     "featuredproducts":"Featured products",
     "contacts":"Contacts",
@@ -201,7 +201,7 @@
     "orderhistoryclients":"Customer order history",
     "orderhistory":"Order history",
     "returnpolicy":"Return policy",
-    "benefits":"Benefits of buying at Nhiquela",
+    "benefits":"Benefits of buying at Rintes",
     "sellerstopay":"Suppliers to pay",
     "deliverstopay":"Deliverers to pay",
     "guarantee":"Guarantee",
