--- a/rintesfront/src/locales/pt/translation.json
+++ b/rintesfront/src/locales/pt/translation.json
@@ -31,7 +31,7 @@
     "reservedrights":"Todos os direitos são reservados. Nhiquela Serviços e Consultoria, LDA",
     "mozambique":"Moçambique",
     "maputocity":"Maputo cidade",
-    "delivertime":"Entregas disponíveis para Maputo cidade e província a partir das",
+    "delivertime":"Nós entregamos a sua viatura onde você estiver – rápido, seguro e com total comodidade",
     "sellernotauthorizedyet":"A sua conta ainda não foi autorizada para poder expor os seus produtos. Para mais informações, por favor contacte a Nhiquela Shop pelos contactos abaixo.",
     "onsale":"Em promoção",
     "featuredproducts":"Produtos em destaque",
@@ -54,11 +54,11 @@
     "alllocations":"Todas Localizaçōes",
     "suppliersnotfound":"Fornecedores não encontrados",
     "suppliersnotadd":"Não existem fornecedores adicionados",
-    "Productsforyou":"Produtos para si",
+    "Productsforyou":"Carros para si",
     "therearenoaddedproducts":"Não existem produtos adicionados",
    "showmore":"Ver mais",
-   "thebestsuppliers":"Melhores fornecedores",
-   "searchproducts":"Pesquisar produtos",
+   "thebestsuppliers":"Melhores Vendedores",
+   "searchproducts":"Pesquisar carro",
    "resultfound":"Resultado(s) encontrado(s)",
    "orderby":"Organizar por",
    "newproducts":"Novos produtos",
@@ -202,7 +202,7 @@
    "orderhistoryclients":"Histórico de pedidos dos clientes",
    "orderhistory":"Histórico de pedidos",
    "returnpolicy":"Política de devolução",
-   "benefits":"Benefícios de comprar na Nhiquela",
+   "benefits":"Benefícios de comprar na Rintes",
    "sellerstopay":"Fornecedores a pagar",
    "deliverstopay":"Entregadores a pagar",
    "guarantee":"Garantia",
